fix: build directory

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-output
-          path: /build
+          path: build
           retention-days: 1
