--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,8 @@ on:
       - completed
 
 jobs:
-  checks:
+  deploy-checks:
+    name: Deploy checks
     runs-on: ubuntu-latest
     outputs:
       parameters: ${{ steps.parameters.outputs.result }}
@@ -73,6 +74,7 @@ jobs:
             return parameters;
 
   deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     needs: checks
     if: ${{ fromJson(needs.checks.outputs.parameters).shouldDeploy }}
