feat: my.immich.app deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - completed
 
 jobs:
-  deploy-checks:
+  checks:
     name: Deploy checks
     runs-on: ubuntu-latest
     outputs:
@@ -120,72 +120,57 @@ jobs:
       - name: Unzip artifact
         run: unzip "${{ github.workspace }}/build-output.zip" -d "${{ github.workspace }}/build"
 
-      # - name: Deploy Subdomain
-      # env:
-      # TF_VAR_prefix_name: ${{ steps.parameters.outputs.name}}
-      # TF_VAR_prefix_event_type: ${{ steps.parameters.outputs.event }}
-      # CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      # CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      # TF_STATE_POSTGRES_CONN_STR: ${{ secrets.TF_STATE_POSTGRES_CONN_STR }}
-      # uses: gruntwork-io/terragrunt-action@v2
-      # with:
-      #   tg_version: '0.58.12'
-      #   tofu_version: '1.7.1'
-      #   tg_dir: 'deployment/modules/cloudflare/docs'
-      #   tg_command: 'apply'
+      - name: Deploy App
+        env:
+          TF_VAR_prefix_name: ${{ steps.parameters.outputs.name}}
+          TF_VAR_prefix_event_type: ${{ steps.parameters.outputs.event }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          TF_STATE_POSTGRES_CONN_STR: ${{ secrets.TF_STATE_POSTGRES_CONN_STR }}
+        uses: gruntwork-io/terragrunt-action@v2
+        with:
+          tg_version: '0.58.12'
+          tofu_version: '1.7.1'
+          tg_dir: 'deployment/modules/cloudflare/my-immich'
+          tg_command: 'apply'
 
-      # - name: Deploy Docs Subdomain Output
-      #   id: docs-output
-      #   env:
-      #     TF_VAR_prefix_name: ${{ steps.parameters.outputs.name}}
-      #     TF_VAR_prefix_event_type: ${{ steps.parameters.outputs.event }}
-      #     CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      #     CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      #     TF_STATE_POSTGRES_CONN_STR: ${{ secrets.TF_STATE_POSTGRES_CONN_STR }}
-      #   uses: gruntwork-io/terragrunt-action@v2
-      #   with:
-      #     tg_version: '0.58.12'
-      #     tofu_version: '1.7.1'
-      #     tg_dir: 'deployment/modules/cloudflare/docs'
-      #     tg_command: 'output -json'
+      - name: Deploy App Output
+        id: terraform-output
+        env:
+          TF_VAR_prefix_name: ${{ steps.parameters.outputs.name}}
+          TF_VAR_prefix_event_type: ${{ steps.parameters.outputs.event }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          TF_STATE_POSTGRES_CONN_STR: ${{ secrets.TF_STATE_POSTGRES_CONN_STR }}
+        uses: gruntwork-io/terragrunt-action@v2
+        with:
+          tg_version: '0.58.12'
+          tofu_version: '1.7.1'
+          tg_dir: 'deployment/modules/cloudflare/my-immich'
+          tg_command: 'output -json'
 
-      # - name: Output Cleaning
-      #   id: clean
-      #   run: |
-      #     TG_OUT=$(echo '${{ steps.docs-output.outputs.tg_action_output }}' | sed 's|%0A|\n|g ; s|%3C|<|g' | jq -c .)
-      #     echo "output=$TG_OUT" >> $GITHUB_OUTPUT
+      - name: Output Cleaning
+        id: clean
+        run: |
+          TG_OUT=$(echo '${{ steps.terraform-output.outputs.tg_action_output }}' | sed 's|%0A|\n|g ; s|%3C|<|g' | jq -c .)
+          echo "output=$TG_OUT" >> $GITHUB_OUTPUT
 
-      # - name: Publish to Cloudflare Pages
-      #   uses: cloudflare/pages-action@v1
-      #   with:
-      #     apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN_PAGES_UPLOAD }}
-      #     accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      #     projectName: ${{ fromJson(steps.clean.outputs.output).pages_project_name.value }}
-      #     workingDirectory: 'docs'
-      #     directory: 'build'
-      #     branch: ${{ steps.parameters.outputs.name }}
-      #     wranglerVersion: '3'
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN_PAGES_UPLOAD }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: ${{ fromJson(steps.clean.outputs.output).pages_project_name.value }}
+          directory: 'build'
+          branch: ${{ steps.parameters.outputs.name }}
+          wranglerVersion: '3'
 
-      # - name: Deploy Docs Release Domain
-      #   if: ${{ steps.parameters.outputs.event == 'release' }}
-      #   env:
-      #     TF_VAR_prefix_name: ${{ steps.parameters.outputs.name}}
-      #     CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      #     CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      #     TF_STATE_POSTGRES_CONN_STR: ${{ secrets.TF_STATE_POSTGRES_CONN_STR }}
-      #   uses: gruntwork-io/terragrunt-action@v2
-      #   with:
-      #     tg_version: '0.58.12'
-      #     tofu_version: '1.7.1'
-      #     tg_dir: 'deployment/modules/cloudflare/docs-release'
-      #     tg_command: 'apply'
-
-      # - name: Comment
-      #   uses: actions-cool/maintain-one-comment@v3
-      #   if: ${{ steps.parameters.outputs.event == 'pr' }}
-      #   with:
-      #     number: ${{ fromJson(needs.checks.outputs.parameters).pr_number }}
-      #     body: |
-      #       📖 Documentation deployed to [${{ fromJson(steps.clean.outputs.output).immich_app_branch_subdomain.value }}](https://${{ fromJson(steps.clean.outputs.output).immich_app_branch_subdomain.value }})
-      #     emojis: 'rocket'
-      #     body-include: '<!-- Docs PR URL -->'
+      - name: Comment
+        uses: actions-cool/maintain-one-comment@v3
+        if: ${{ steps.parameters.outputs.event == 'pr' }}
+        with:
+          number: ${{ fromJson(needs.checks.outputs.parameters).pr_number }}
+          body: |
+            📖 Preview of my.immich.app deployed to [${{ fromJson(steps.clean.outputs.output).immich_app_branch_subdomain.value }}](https://${{ fromJson(steps.clean.outputs.output).immich_app_branch_subdomain.value }})
+          emojis: 'rocket'
+          body-include: '<!-- Pages PR URL -->'
