--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,13 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - app: my.immich-app
+            name: my-immich
+          - app: buy.immich.app
+            name: buy-immich
 
     steps:
       - name: Checkout code
@@ -25,6 +32,11 @@ jobs:
         with:
           node-version-file: '.nvmrc'
 
+      - name: Set app
+        run: |
+          touch .env
+          echo IMMICH_APP="${{ matrix.app }}" >> .env
+
       - name: Run npm install
         run: npm ci
 
@@ -34,6 +46,6 @@ jobs:
       - name: Upload build output
         uses: actions/upload-artifact@v4
         with:
-          name: build-output
+          name: build-output-${{ matrix.name }}
           path: build
           retention-days: 1
