--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -6,6 +6,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - app: my.immich.app
+            name: my-immich
+          - app: buy.immich.app
+            name: buy-immich
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -14,6 +21,8 @@ jobs:
         env:
           TF_VAR_prefix_name: 'pr-${{ github.event.number }}'
           TF_VAR_prefix_event_type: 'pr'
+          TF_VAR_app_url: ${{ matrix.app }}
+          TF_VAR_app_name: ${{ matrix.name }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           TF_STATE_POSTGRES_CONN_STR: ${{ secrets.TF_STATE_POSTGRES_CONN_STR }}
@@ -21,7 +30,7 @@ jobs:
         with:
           tg_version: '0.58.12'
           tofu_version: '1.7.1'
-          tg_dir: 'deployment/modules/cloudflare/my-immich'
+          tg_dir: 'deployment/modules/cloudflare/static-pages'
           tg_command: 'destroy'
 
       - name: Comment
