--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,6 +84,13 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: checks
+    strategy:
+      matrix:
+        include:
+          - app: my.immich.app
+            name: my-immich
+          - app: buy.immich.app
+            name: buy-immich
     if: ${{ fromJson(needs.checks.outputs.parameters).shouldDeploy }}
     steps:
       - name: Checkout code
