--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "vite": "^5.0.3",
     "vitest": "^1.2.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@mdi/js": "^7.4.47"
+  }
 }
