refactor: license code

--- a/example.env
+++ b/example.env
@@ -1,1 +1,3 @@
 IMMICH_APP=buy.immich.app
+PUBLIC_IMMICH_PAY_HOST=https://futopay-test.azurewebsites.net
+orderId=e1eddcf3-ae45-4124-bba0-f9c7ec67b255
