--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "dotenv -- vite dev",
-    "build": "npm run sync && dotenv -- vite build",
-    "preview": "dotenv -- vite preview",
-    "check": "npm run sync && dotenv -- svelte-check --tsconfig ./tsconfig.json",
-    "sync": "dotenv -- svelte-kit sync",
-    "test": "dotenv -- vitest",
+    "start": "vite dev",
+    "build": "npm run sync && vite build",
+    "preview": "vite preview",
+    "check": "npm run sync && svelte-check --tsconfig ./tsconfig.json",
+    "sync": "svelte-kit sync",
+    "test": "vitest",
     "lint": "prettier --check . && eslint . --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --check .",
@@ -20,7 +20,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/eslint": "^8.56.7",
     "autoprefixer": "^10.4.19",
-    "dotenv-cli": "^7.4.2",
+    "dotenv": "^16.4.5",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
