feat: data.immich.app

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
             name: my-immich
           - app: buy.immich.app
             name: buy-immich
+          - app: data.immich.app
+            name: data-immich
 
     steps:
       - name: Checkout code
