--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "check": "npm run sync && svelte-check --tsconfig ./tsconfig.json",
     "sync": "svelte-kit sync",
     "test": "vitest",
-    "lint": "prettier --check . && eslint . --max-warnings 0",
+    "lint": "eslint . --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --check .",
     "format:fix": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.2",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.8.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "@types/eslint": "^9.0.0",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
@@ -28,11 +28,11 @@
     "postcss": "^8.4.39",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^4.0.0",
+    "svelte": "^5.1.15",
+    "svelte-check": "^4.0.7",
     "tailwindcss": "^3.4.4",
     "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.0.0-alpha.20",
     "vite": "^5.0.3",
     "vitest": "^2.0.0"
