--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tailwindcss": "^3.4.4",
     "tslib": "^2.4.1",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.0.0-alpha.20",
+    "typescript-eslint": "^8.15.0",
     "vite": "^5.0.3",
     "vitest": "^2.0.0"
   },
