ci: dont cancel other deployments if one fails

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -7,6 +7,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         environment: ['dev', 'prod']
         include:
