--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         environment: ['dev', 'prod']
         name: ['my', 'buy']
