ci: remove unused tf var and add missing tofu and tf version variables

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -3,6 +3,10 @@ on:
   pull_request_target:
     types: [closed]
 
+env:
+  tofu_version: '1.7.1'
+  tg_version: '0.69.0'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
