--- a/package.json
+++ b/package.json
@@ -17,26 +17,26 @@
   "devDependencies": {
     "@immich/ui": "^0.6.0",
     "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.8.0",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "@sveltejs/kit": "^2.12.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.2",
     "@types/eslint": "^9.0.0",
     "autoprefixer": "^10.4.19",
-    "dotenv": "^16.4.5",
-    "eslint": "^9.0.0",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.36.0",
-    "globals": "^15.0.0",
+    "eslint-plugin-svelte": "^2.46.1",
+    "globals": "^15.13.0",
     "postcss": "^8.4.39",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^5.1.15",
-    "svelte-check": "^4.0.7",
-    "tailwindcss": "^3.4.4",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.2",
+    "svelte": "^5.14.1",
+    "svelte-check": "^4.1.1",
+    "tailwindcss": "^3.4.16",
     "tslib": "^2.4.1",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.15.0",
-    "vite": "^5.0.3",
-    "vitest": "^2.0.0"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.1",
+    "vite": "^6.0.3",
+    "vitest": "^2.1.8"
   },
   "type": "module",
   "dependencies": {
