--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        app: [my.immich.app, buy.immich.app]
+        app_name: [my, buy, get]
 
     steps:
       - name: Checkout code
@@ -29,7 +29,7 @@ jobs:
       - name: Set app
         run: |
           touch .env
-          echo IMMICH_APP="${{ matrix.app }}" >> .env
+          echo IMMICH_APP="${{ matrix.app_name }}.immich.app" >> .env
 
       - name: Run npm install
         run: npm ci
