--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier-plugin-svelte": "^3.3.2",
     "svelte": "^5.14.1",
     "svelte-check": "^4.1.1",
+    "svelte-highlight": "^7.8.2",
     "tailwindcss": "^3.4.16",
     "tslib": "^2.4.1",
     "typescript": "^5.7.2",
