--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
 IMMICH_APP=buy.immich.app
 PUBLIC_IMMICH_PAY_HOST=https://futopay-test.azurewebsites.net
-orderId=e1eddcf3-ae45-4124-bba0-f9c7ec67b255
+# PUBLIC_IMMICH_API_HOST=http://localhost:8080
+# PUBLIC_IMMICH_API_HOST=https://api.immich.app
+# PUBLIC_IMMICH_SPEC_URL=http://localhost:3000/api/spec.json
