--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        app_name: ['my', 'buy', 'get']
+        app_name: ['my', 'buy', 'get', 'next']
 
     steps:
       - name: Checkout code
@@ -64,7 +64,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        app_name: ['my', 'buy', 'get']
+        app_name: ['my', 'buy', 'get', 'next']
     env:
       TF_VAR_app_name: ${{ matrix.app_name }}
       TF_VAR_stage: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
