--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "format:fix": "prettier --write ."
   },
   "devDependencies": {
-    "@immich/ui": "^0.21.1",
+    "@immich/ui": "^0.22.6",
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.12.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.2",
+    "@tailwindcss/vite": "^4.1.8",
     "@types/eslint": "^9.0.0",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.7",
@@ -26,13 +27,12 @@
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-svelte": "^2.46.1",
     "globals": "^16.0.0",
-    "postcss": "^8.4.39",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
     "svelte": "^5.14.1",
     "svelte-check": "^4.1.1",
     "svelte-highlight": "^7.8.2",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^4.1.8",
     "tslib": "^2.4.1",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.1",
