--- a/apps/datasets.immich.app/backend/package.json
+++ b/apps/datasets.immich.app/backend/package.json
@@ -11,13 +11,16 @@
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.8.19",
+		"@types/luxon": "^3.6.2",
 		"typescript": "^5.5.2",
 		"vitest": "~3.0.7",
 		"wrangler": "^4.18.0"
 	},
 	"dependencies": {
+		"@tsndr/cloudflare-worker-jwt": "^3.2.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
-		"itty-router": "^5.0.18"
+		"itty-router": "^5.0.18",
+		"luxon": "^3.6.1"
 	}
 }
