chore: tf 1.10 update

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  tofu_version: '1.7.1'
-  tg_version: '0.69.0'
+  tofu_version: '1.10.2'
+  tg_version: '0.83.0'
   ENVIRONMENT: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
 
 jobs:
@@ -63,7 +63,6 @@ jobs:
     needs: build
     strategy:
       fail-fast: false
-      max-parallel: 1
       matrix:
         app_name: ['next', 'my', 'buy', 'get']
     env:
@@ -96,7 +95,7 @@ jobs:
 
       - name: Deploy All
         working-directory: ${{ github.workspace }}/deployment
-        run: op run --env-file=".env" -- terragrunt run-all apply --terragrunt-non-interactive
+        run: op run --env-file=".env" -- terragrunt run --all apply --terragrunt-non-interactive
 
       - name: Cloudflare Deploy Output
         id: deploy-output
