--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   "devDependencies": {
     "@immich/ui": "^0.22.6",
     "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.12.1",
-    "@sveltejs/vite-plugin-svelte": "^5.0.2",
-    "@tailwindcss/vite": "^4.1.8",
+    "@sveltejs/kit": "^2.26.1",
+    "@sveltejs/vite-plugin-svelte": "^6.0.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/eslint": "^9.0.0",
     "autoprefixer": "^10.4.19",
     "dotenv": "^17.0.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-svelte": "^2.46.1",
+    "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.2",
@@ -36,11 +36,14 @@
     "tslib": "^2.4.1",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.3",
+    "vite": "^7.0.0",
     "vitest": "^3.0.0"
   },
   "type": "module",
   "dependencies": {
     "@mdi/js": "^7.4.47"
+  },
+  "volta": {
+    "node": "22.18.0"
   }
 }
