--- a/apps/datasets.immich.app/backend/.prettierrc
+++ b/apps/datasets.immich.app/backend/.prettierrc
@@ -1,6 +1,7 @@
 {
-	"printWidth": 140,
-	"singleQuote": true,
-	"semi": true,
-	"useTabs": true
+  "printWidth": 120,
+  "singleQuote": true,
+  "semi": true,
+  "tabWidth": 2,
+  "useTabs": false
 }
