--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         environment: ['dev', 'prod']
-        name: ['my', 'buy', 'get', 'next', 'datasets']
+        name: ['api', 'next', 'my', 'buy', 'get', 'datasets']
     steps:
       - name: Checkout code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
