chore: refactor uploads

--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
   "type": "module",
   "dependencies": {
     "@mdi/js": "^7.4.47",
-    "simple-icons": "^15.9.0",
-    "exifreader": "^4.31.0"
+    "exifreader": "^4.31.0",
+    "p-limit": "^6.2.0",
+    "simple-icons": "^15.9.0"
   },
   "volta": {
     "node": "22.18.0"
