--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "@types/eslint": "^9.0.0",
+    "@types/node": "^24.3.0",
     "autoprefixer": "^10.4.19",
     "dotenv": "^17.0.0",
     "eslint": "^9.17.0",
