--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format:fix": "prettier --write ."
   },
   "devDependencies": {
-    "@immich/ui": "^0.24.2",
+    "@immich/ui": "^0.25.0",
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.26.1",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
@@ -44,6 +44,7 @@
   "type": "module",
   "dependencies": {
     "@mdi/js": "^7.4.47",
+    "bits-ui": "^2.9.4",
     "exifreader": "^4.31.0",
     "p-limit": "^6.2.0",
     "simple-icons": "^15.9.0"
