--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@sveltejs/vite-plugin-svelte": "^6.1.4",
     "@tailwindcss/vite": "^4.1.13",
     "@types/eslint": "^9.0.0",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^24.3.1",
     "autoprefixer": "^10.4.19",
     "dotenv": "^17.2.2",
@@ -46,6 +47,7 @@
     "@mdi/js": "^7.4.47",
     "bits-ui": "^2.9.6",
     "exifreader": "^4.31.2",
+    "luxon": "^3.7.2",
     "p-limit": "^7.1.1",
     "simple-icons": "^15.9.0"
   },
