--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         environment: ['dev', 'prod']
-        name: ['api', 'next', 'my', 'buy', 'get', 'datasets']
+        name: ['api', 'root', 'my', 'buy', 'get', 'datasets']
     steps:
       - name: Checkout code
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
