--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format:fix": "prettier --write ."
   },
   "devDependencies": {
-    "@immich/ui": "^0.33.0",
+    "@immich/ui": "^0.34.1",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/kit": "^2.37.1",
     "@sveltejs/vite-plugin-svelte": "^6.1.4",
@@ -47,6 +47,7 @@
     "@mdi/js": "^7.4.47",
     "bits-ui": "^2.9.6",
     "exifreader": "^4.31.2",
+    "feed": "^5.1.0",
     "luxon": "^3.7.2",
     "p-limit": "^7.1.1",
     "simple-icons": "^15.9.0"
