feat: awesome immich

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        app_name: ['root', 'api', 'my', 'get', 'buy', 'datasets']
+        app_name: ['root', 'api', 'awesome', 'my', 'get', 'buy', 'datasets']
 
     defaults:
       run:
@@ -108,7 +108,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app_name: ['root', 'api', 'my', 'get', 'buy', 'datasets']
+        app_name: ['root', 'api', 'awesome', 'my', 'get', 'buy', 'datasets']
     env:
       TF_VAR_app_name: ${{ matrix.app_name }}
       TF_VAR_stage: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || '' }}
