--- a/apps/awesome.immich.app/package.json
+++ b/apps/awesome.immich.app/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "my.immich.app",
+  "name": "awesome.immich.app",
   "private": true,
   "version": "0.0.1",
-  "license": "GNU Affero General Public License version 3",
   "type": "module",
   "scripts": {
     "start": "vite dev",
@@ -23,17 +22,22 @@
     "@sveltejs/kit": "^2.43.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^22.18.9",
     "@vitest/browser": "^3.2.4",
     "dotenv": "^17.2.3",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.12.4",
+    "front-matter": "^4.0.2",
     "globals": "^16.4.0",
+    "luxon": "^3.7.2",
+    "marked": "^16.4.0",
     "playwright": "^1.55.1",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "simple-icons": "^15.16.1",
     "svelte": "^5.39.5",
     "svelte-check": "^4.3.2",
     "tailwindcss": "^4.1.13",
@@ -45,8 +49,6 @@
   },
   "dependencies": {
     "@immich/ui": "^0.36.0",
-    "@mdi/js": "^7.4.47",
-    "simple-icons": "^15.16.1",
-    "svelte-highlight": "^7.8.4"
+    "@mdi/js": "^7.4.47"
   }
 }
