--- a/apps/buy.immich.app/package.json
+++ b/apps/buy.immich.app/package.json
@@ -44,8 +44,9 @@
     "vitest-browser-svelte": "^1.1.0"
   },
   "dependencies": {
-    "@immich/ui": "^0.35.0",
+    "@immich/ui": "^0.36.0",
     "@mdi/js": "^7.4.47",
+    "simple-icons": "^15.16.1",
     "svelte-highlight": "^7.8.4"
   }
 }
