--- a/apps/datasets.immich.app/backend/package.json
+++ b/apps/datasets.immich.app/backend/package.json
@@ -17,10 +17,12 @@
     "wrangler": "^4.18.0"
   },
   "dependencies": {
+    "@immich/ui": "^0.36.0",
     "@tsndr/cloudflare-worker-jwt": "^3.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "itty-router": "^5.0.18",
-    "luxon": "^3.6.1"
+    "luxon": "^3.6.1",
+    "simple-icons": "^15.16.1"
   }
 }
