--- a/apps/datasets.immich.app/package.json
+++ b/apps/datasets.immich.app/package.json
@@ -44,10 +44,11 @@
     "vitest-browser-svelte": "^1.1.0"
   },
   "dependencies": {
-    "@immich/ui": "^0.35.0",
+    "@immich/ui": "^0.36.0",
     "@mdi/js": "^7.4.47",
     "exifreader": "^4.32.0",
     "p-limit": "^7.1.1",
+    "simple-icons": "^15.16.1",
     "svelte-highlight": "^7.8.4",
     "svelte-turnstile": "^0.11.0"
   }
