--- a/apps/root.immich.app/package.json
+++ b/apps/root.immich.app/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.36.0",
+    "@immich/svelte-markdown-preprocess": "^0.0.1",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/kit": "^2.43.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
@@ -48,7 +49,7 @@
     "vitest-browser-svelte": "^1.1.0"
   },
   "dependencies": {
-    "@immich/ui": "^0.36.0",
+    "@immich/ui": "^0.40.1",
     "@mdi/js": "^7.4.47",
     "feed": "^5.1.0",
     "svelte-highlight": "^7.8.4"
