--- a/apps/root.immich.app/package.json
+++ b/apps/root.immich.app/package.json
@@ -8,6 +8,7 @@
     "build": "npm run sync && vite build && node ../../bin/postbuild.js",
     "preview": "vite preview",
     "check": "npm run sync && svelte-check --tsconfig ./tsconfig.json",
+    "uuid": "npx -y uuid v7",
     "sync": "svelte-kit sync",
     "test": "vitest",
     "lint": "eslint . --max-warnings 0",
@@ -18,7 +19,7 @@
   "devDependencies": {
     "@eslint/compat": "^1.4.0",
     "@eslint/js": "^9.36.0",
-    "@immich/svelte-markdown-preprocess": "^0.0.1",
+    "@immich/svelte-markdown-preprocess": "^0.1.0",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/kit": "^2.43.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
@@ -30,7 +31,6 @@
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.12.4",
-    "front-matter": "^4.0.2",
     "globals": "^16.4.0",
     "luxon": "^3.7.2",
     "marked": "^16.4.0",
@@ -49,9 +49,10 @@
     "vitest-browser-svelte": "^2.0.0"
   },
   "dependencies": {
-    "@immich/ui": "^0.40.1",
+    "@immich/ui": "^0.40.3",
     "@mdi/js": "^7.4.47",
     "feed": "^5.1.0",
+    "front-matter": "^4.0.2",
     "svelte-highlight": "^7.8.4"
   }
 }
