--- a/.github/workflows/import-post.yml
+++ b/.github/workflows/import-post.yml
@@ -10,6 +10,9 @@ jobs:
   import:
     runs-on: ubuntu-latest
     steps:
+      - name: Install uv
+        uses: astral-sh/setup-uv@2ddd2b9cb38ad8efd50337e8ab201519a34c9f24 # v7.1.1
+        
       - name: Generate a token
         id: generate-token
         uses: actions/create-github-app-token@67018539274d69449ef7c02e8e71183d1719ab42 # v2.1.4
