--- a/.github/workflows/import-post.yml
+++ b/.github/workflows/import-post.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Install uv
         uses: astral-sh/setup-uv@2ddd2b9cb38ad8efd50337e8ab201519a34c9f24 # v7.1.1
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
         
       - name: Generate a token
         id: generate-token
