--- a/.github/workflows/import-post.yml
+++ b/.github/workflows/import-post.yml
@@ -42,7 +42,7 @@ jobs:
         run: uv run --script import-post.py
 
       - name: Format
-        run: pnpm --filter "...[HEAD]" run format:fix
+        run: pnpm --filter root.immich.app run format:fix
 
       - name: Create PR
         uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
