--- a/apps/api.immich.app/package.json
+++ b/apps/api.immich.app/package.json
@@ -47,6 +47,7 @@
     "@immich/ui": "^0.41.0",
     "@mdi/js": "^7.4.47",
     "simple-icons": "^15.16.1",
-    "svelte-highlight": "^7.8.4"
+    "svelte-highlight": "^7.8.4",
+    "tailwind-variants": "^3.1.1"
   }
 }
